Mon Jul 20 01:35:49 UTC 2020
openboard: Upgraded to 1.6.0a3
+--------------------------+
Mon Apr  6 07:42:15 UTC 2020
openboard: Added.
+--------------------------+
Wed Sep  6 23:32:00 WIB 2017
digikam5: Upgraded to 5.7.0
+--------------------------+
Mon Aug 14 17:17:08 WIB 2017
framework5: Upgraded to 5.37.0
+--------------------------+
Sat Jul 22 23:01:23 WIB 2017
digikam5: Rebuilt against latest current update.
+--------------------------+
Thu Jul 20 21:12:10 WIB 2017
framework5: Upgraded to 5.36.0
+--------------------------+
Fri Jun 23 02:08:48 WIB 2017
digikam5: Upgraded to 5.6.0
+--------------------------+
Mon Jun 12 17:38:58 UTC 2017
framework5: Upgraded to 5.35.0
+--------------------------+
Sun May 14 23:24:50 WIB 2017
framework5: Upgraded to 5.34.0
+--------------------------+
Sun Apr  9 12:26:58 WIB 2017
digikam5: Upgraded to 5.5.0.
framework5: Upgraded to 5.33.0
+--------------------------+
Tue Jan 31 22:38:04 WIB 2017
framework5: Upgraded to 5.30.0
+--------------------------+
Wed Jan 11 01:07:30 WIB 2017
digikam5: Upgraded to 5.4.0
+--------------------------+
Wed Nov 16 13:58:03 WIB 2016
framework5: Upgraded to 5.28.0
+--------------------------+
Mon Nov  7 07:57:27 WIB 2016
digikam5: Upgraded to 5.3.0
+--------------------------+
Sun Oct  9 01:45:09 WIB 2016
framework5: Upgraded to 5.27.0
+--------------------------+
Sat Sep 24 06:28:36 WIB 2016
digikam5: Upgraded to 5.2.0
+--------------------------+
Sun Sep 11 14:35:39 WIB 2016
framework5: Upgraded to 5.26.0
+--------------------------+
Fri Aug 19 07:19:37 WIB 2016
digikam5: Upgraded to 5.1.0
framework5: Upgraded to 5.25.0
+--------------------------+
Sun Jul 10 16:06:02 WIB 2016
framework5/tier3/knotifyconfig: Added.
+--------------------------+
Sun Jul 10 07:37:43 WIB 2016
framework5: Upgraded to 5.24.0
+--------------------------+
Fri Jul  8 06:23:39 WIB 2016
digikam5: Update DEP.
libkipi5: Added (renamed from libkipi)
+--------------------------+
Thu Jul  7 22:50:47 WIB 2016
digikam5: Added