@@ -1,0 +1,1 @@
+pulseeffects provides Audio effects for Pulseaudio applications.
