@@ -1,0 +1,10 @@
+PRGNAM="pulseeffects"
+VERSION="4.8.0"
+HOMEPAGE="https://github.com/wwmm/pulseeffects"
+DOWNLOAD="https://github.com/wwmm/pulseeffects/archive/v4.8.0/pulseeffects-4.8.0.tar.gz"
+MD5SUM="5fe6495184b69ad287f48f4ec51213f6"
+DOWNLOAD_x86_64=""
+MD5SUM_x86_64=""
+REQUIRES="libebur128 zita-resampler zita-convolver libbs2b lilv gst-plugins-bad"
+MAINTAINER="Willy Sudiarto Raharjo"
+EMAIL="willysr@slackbuilds.org"
