@@ -1,3 +1,6 @@
+Fri Aug 21 19:04:07 UTC 2020
+pulseeffects: Added.
++--------------------------+
 Mon Jul 20 01:35:49 UTC 2020
 openboard: Upgraded to 1.6.0a3
 +--------------------------+
